2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollection.cs: Added a TODO.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl trivial things.cs: Switched to implemented Selector.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: Fixed previous change.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem.cs: It uses Selector events now.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Optimized and made closer to Microsoft implementation.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Removed useless calls.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Fixed indicator sizing when Orientation is Vertical.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgessBar.cs: Fixed indicator sizing.

2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* Expanded.cs: Added.
	
2007-07-01  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Some changes that make some tests pass. Stack traces reveal internal classes being used (MS.Internal....). The implementation of ItemsControl-derived classes will most likely require the implementation of ItemsControl and its related classes.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Fixed previous change.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More work.

2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItem trivial things.cs, TabItem.cs: Fixed UI action handling.
	
2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl trivial things.cs, TabControl.cs, TabItem trivial things.cs, TabItem.cs: Moved the trivial code (CLR properties backing dependency properties, utility methods, etc.) in separate files in an attempt to make TabControl and TabItem easier to work with (the selection handling logic appears to be quite complex).
	