@@ -1,5 +1,9 @@
 2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Removed unneeded explicit interface implementations.
+
+2007-07-09  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ColumnDefinitionCollection.cs: Added a TODO.
 
 2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>
